[WFCORE-3915] Do not deploy testsuite modules
Some testsuite do not use wildfly-core-testsuite as their parent.
Flag those to skip Maven deployments (testsuite modules are not part of
a release).

JIRA: https://issues.jboss.org/browse/WFCORE-3915

--- a/testsuite/shared/pom.xml
+++ b/testsuite/shared/pom.xml
@@ -28,6 +28,9 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
+    <!-- uses wildfly-core-parent parent as wildfly-core-testsuite-shared
+     is a dependency of wildfly-core-testsuite and can not be its child
+    -->
     <parent>
         <groupId>org.wildfly.core</groupId>
         <artifactId>wildfly-core-parent</artifactId>
@@ -39,6 +42,12 @@
     <packaging>jar</packaging>
 
     <name>WildFly Core Test Suite: Shared</name>
+
+    <properties>
+        <!-- Don't deploy the testsuite modules -->
+        <maven.deploy.skip>true</maven.deploy.skip>
+    </properties>
+
     <build>
         <resources>
             <resource>
