--- a/testsuite/vault-test-feature-pack/pom.xml
+++ b/testsuite/vault-test-feature-pack/pom.xml
@@ -43,6 +43,12 @@
         module solely for WildFly Core testsuite use in testing its security vault functionality
     </description>
 
+
+    <properties>
+        <!-- Don't deploy the testsuite modules -->
+        <maven.deploy.skip>true</maven.deploy.skip>
+    </properties>
+
     <dependencies>
 
         <!-- feature pack dependencies -->
